# rusty-library-management

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md
resources/: config.ini
src/: App.css  App.jsx  SignIn.jsx  app.rs  data_manager.rs  lib.rs  main.jsx  main.rs  types.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: config.ini
src-tauri/src/: app.rs  data_manager.rs  main.rs  types.rs  utils.rs
src/dashboard/: Content.jsx  Dashboard.jsx  Header.jsx  Navigator.jsx
