[package]
name = "rusty-library-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.2"
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
