[package]
name = "rusty-library-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.2"
postgrest = "1.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.18"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"